--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 <body>
   <header>
     <div class="logo">
-      <img src="https://github.com/sachineasy/easyaarogyasoft/blob/baec81751cae3677b9c8ed0fc0e0df2d71886d72/eas_soft.jpg" alt="EasyAarogyasoft Logo" />
+      <img src="https://raw.githubusercontent.com/sachineasy/easyaarogyasoft/main/eas_soft.jpg" alt="EasyAarogyasoft Logo" />
       <h1>EasyAarogyasoft</h1>
     </div>
     <nav>
