--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 <body>
   <header>
     <div class="logo">
-      <img src="https://drive.google.com/file/d/1HT5HpPG_nXSBmarP_csA1aWj-279qcHj" alt="EasyAarogyasoft Logo" />
+      <img src="https://drive.google.com/uc?export=view&id=1HT5HpPG_nXSBmarP_csA1aWj-279qcHj" alt="EasyAarogyasoft Logo" />
       <h1>EasyAarogyasoft</h1>
     </div>
     <nav>
