--- a/index.html
+++ b/index.html
@@ -1,6 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
+  <title>Easy Aarogya Soft – Healthcare Software Solutions</title>
+<meta name="description" content="Easy Aarogya Soft builds smart healthcare software like clinic & hospital management, telemedicine, and analytics tools.">
+<meta name="keywords" content="healthcare software, hospital management, telemedicine, AarogyaPro">
+<meta name="robots" content="index, follow">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<!-- Optional social cards -->
+<meta property="og:title" content="Easy Aarogya Soft – Healthcare Software Solutions" />
+<meta property="og:description" content="Smart clinic & hospital software including TeleCare, AarogyaPro, and AI-powered dashboards." />
+<meta property="og:url" content="https://easyaarogyasoft.com/" />
+<meta property="og:image" content="https://easyaarogyasoft.com/path-to-logo-or-preview.png" />
+
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>EasyAarogyasoft-Fulfilling Your Software Needs with Precision and Care</title>
